Added a template for exp 2 COMPAS outliers

--- a/notebooks/stress_testing_with_cols/COMPAS_With_Outliers.ipynb
+++ b/notebooks/stress_testing_with_cols/COMPAS_With_Outliers.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "d09bc978",
    "metadata": {
     "ExecuteTime": {
@@ -314,14 +314,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  4850ff61-3270-4584-9e71-e6c07ea03a6a\n"
+      "Current session uuid:  72079650-0f90-41e5-908e-ef4c9d9826b8\n"
      ]
     }
    ],
    "source": [
     "import uuid\n",
     "\n",
-    "custom_table_fields_dct['session_uuid'] = '4850ff61-3270-4584-9e71-e6c07ea03a6a'\n",
+    "custom_table_fields_dct['session_uuid'] = '72079650-0f90-41e5-908e-ef4c9d9826b8'\n",
     "# custom_table_fields_dct['session_uuid'] = str(uuid.uuid4())\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
@@ -351,8 +351,7 @@
     "f\"\"\"\n",
     "dataset_name: COMPAS\n",
     "bootstrap_fraction: 0.8\n",
-    "# n_estimators: 200  # Better to input the higher number of estimators than 100; this is only for this use case example\n",
-    "n_estimators: 10\n",
+    "n_estimators: 200  # Better to input the higher number of estimators than 100; this is only for this use case example\n",
     "num_runs: 1\n",
     "runs_seed_lst: [100]\n",
     "sensitive_attributes_dct: {{'sex': 0, 'race': 'Caucasian', 'sex&race': None}}\n",
@@ -397,62 +396,62 @@
    },
    "outputs": [],
    "source": [
-    "def get_models_params_for_tuning(models_tuning_seed):\n",
-    "    return {\n",
-    "        'DecisionTreeClassifier': {\n",
-    "            'model': DecisionTreeClassifier(random_state=models_tuning_seed),\n",
-    "            'params': {\n",
-    "                \"max_depth\": [20, 30],\n",
-    "                \"min_samples_split\" : [0.1],\n",
-    "                \"max_features\": ['sqrt'],\n",
-    "                \"criterion\": [\"gini\", \"entropy\"]\n",
-    "            }\n",
-    "        },\n",
-    "        'LogisticRegression': {\n",
-    "            'model': LogisticRegression(random_state=models_tuning_seed),\n",
-    "            'params': {\n",
-    "                'penalty': ['l2'],\n",
-    "                'C' : [0.0001, 0.1, 1, 100],\n",
-    "                'solver': ['newton-cg', 'lbfgs'],\n",
-    "                'max_iter': [250],\n",
-    "            }\n",
-    "        },\n",
-    "        # 'RandomForestClassifier': {\n",
-    "        #     'model': RandomForestClassifier(random_state=models_tuning_seed),\n",
-    "        #     'params': {\n",
-    "        #         \"max_depth\": [6, 10],\n",
-    "        #         \"min_samples_leaf\": [1],\n",
-    "        #         \"n_estimators\": [50, 100],\n",
-    "        #         \"max_features\": [0.6]\n",
-    "        #     }\n",
-    "        # },\n",
-    "        # 'XGBClassifier': {\n",
-    "        #     'model': XGBClassifier(random_state=models_tuning_seed, verbosity=0),\n",
-    "        #     'params': {\n",
-    "        #         'learning_rate': [0.1],\n",
-    "        #         'n_estimators': [200],\n",
-    "        #         'max_depth': [5, 7],\n",
-    "        #         'lambda':  [10, 100]\n",
-    "        #     }\n",
-    "        # },\n",
-    "        # 'KNeighborsClassifier': {\n",
-    "        #     'model': KNeighborsClassifier(),\n",
-    "        #     'params': {\n",
-    "        #         'n_neighbors' : [5, 7, 9, 11, 13, 15, 25],\n",
-    "        #         'weights' : ['uniform', 'distance'],\n",
-    "        #         'metric' : ['minkowski', 'euclidean', 'manhattan']\n",
-    "        #     }\n",
-    "        # },\n",
-    "        # 'MLPClassifier': {\n",
-    "        #     'model': MLPClassifier(random_state=models_tuning_seed),\n",
-    "        #     'params': {\n",
-    "        #         'hidden_layer_sizes':[(100,), (100,100,), (100,50,100,)],\n",
-    "        #         'activation': ['logistic', 'tanh', 'relu'],\n",
-    "        #         'solver': ['lbfgs', 'sgd', 'adam'],\n",
-    "        #         'learning_rate': ['constant', 'invscaling', 'adaptive']\n",
-    "        #     }\n",
-    "        # }\n",
-    "    }"
+    "# def get_models_params_for_tuning(models_tuning_seed):\n",
+    "#     return {\n",
+    "#         'DecisionTreeClassifier': {\n",
+    "#             'model': DecisionTreeClassifier(random_state=models_tuning_seed),\n",
+    "#             'params': {\n",
+    "#                 \"max_depth\": [20, 30],\n",
+    "#                 \"min_samples_split\" : [0.1],\n",
+    "#                 \"max_features\": ['sqrt'],\n",
+    "#                 \"criterion\": [\"gini\", \"entropy\"]\n",
+    "#             }\n",
+    "#         },\n",
+    "#         'LogisticRegression': {\n",
+    "#             'model': LogisticRegression(random_state=models_tuning_seed),\n",
+    "#             'params': {\n",
+    "#                 'penalty': ['l2'],\n",
+    "#                 'C' : [0.0001, 0.1, 1, 100],\n",
+    "#                 'solver': ['newton-cg', 'lbfgs'],\n",
+    "#                 'max_iter': [250],\n",
+    "#             }\n",
+    "#         },\n",
+    "#         # 'RandomForestClassifier': {\n",
+    "#         #     'model': RandomForestClassifier(random_state=models_tuning_seed),\n",
+    "#         #     'params': {\n",
+    "#         #         \"max_depth\": [6, 10],\n",
+    "#         #         \"min_samples_leaf\": [1],\n",
+    "#         #         \"n_estimators\": [50, 100],\n",
+    "#         #         \"max_features\": [0.6]\n",
+    "#         #     }\n",
+    "#         # },\n",
+    "#         # 'XGBClassifier': {\n",
+    "#         #     'model': XGBClassifier(random_state=models_tuning_seed, verbosity=0),\n",
+    "#         #     'params': {\n",
+    "#         #         'learning_rate': [0.1],\n",
+    "#         #         'n_estimators': [200],\n",
+    "#         #         'max_depth': [5, 7],\n",
+    "#         #         'lambda':  [10, 100]\n",
+    "#         #     }\n",
+    "#         # },\n",
+    "#         # 'KNeighborsClassifier': {\n",
+    "#         #     'model': KNeighborsClassifier(),\n",
+    "#         #     'params': {\n",
+    "#         #         'n_neighbors' : [5, 7, 9, 11, 13, 15, 25],\n",
+    "#         #         'weights' : ['uniform', 'distance'],\n",
+    "#         #         'metric' : ['minkowski', 'euclidean', 'manhattan']\n",
+    "#         #     }\n",
+    "#         # },\n",
+    "#         # 'MLPClassifier': {\n",
+    "#         #     'model': MLPClassifier(random_state=models_tuning_seed),\n",
+    "#         #     'params': {\n",
+    "#         #         'hidden_layer_sizes':[(100,), (100,100,), (100,50,100,)],\n",
+    "#         #         'activation': ['logistic', 'tanh', 'relu'],\n",
+    "#         #         'solver': ['lbfgs', 'sgd', 'adam'],\n",
+    "#         #         'learning_rate': ['constant', 'invscaling', 'adaptive']\n",
+    "#         #     }\n",
+    "#         # }\n",
+    "#     }"
    ]
   },
   {
@@ -487,8 +486,7 @@
     "error_injector = OutliersInjectorV2(experiment_seed, columns_to_transform=COLUMNS_TO_TRANSFORM,\n",
     "                                    row_idx_percentage=ROWS_PCT_TO_AFFECT,\n",
     "                                    max_num_columns_to_effect=0)\n",
-    "# models_params_for_tuning = get_compas_models_params_for_tuning(experiment_seed)\n",
-    "models_params_for_tuning = get_models_params_for_tuning(experiment_seed)\n",
+    "models_params_for_tuning = get_compas_models_params_for_tuning(experiment_seed)\n",
     "# Create a transformed data loader\n",
     "exp_iter_data_loader = create_experiment_data_loader(data_loader)\n",
     "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
@@ -666,6 +664,250 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Experiment iteration 2"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Configs for an experiment iteration\n",
+    "exp_iter_num = 2\n",
+    "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
+    "tuned_params_filename = 'tuning_results_COMPAS_exp_iter_2_20230425__180925.csv'\n",
+    "tuned_params_df_path = os.path.join(ROOT_DIR, 'results', 'stress_testing_nulls',\n",
+    "                                    'models_tuning', tuned_params_filename)\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "\n",
+    "error_injector = OutliersInjectorV2(experiment_seed, columns_to_transform=COLUMNS_TO_TRANSFORM,\n",
+    "                                    row_idx_percentage=ROWS_PCT_TO_AFFECT,\n",
+    "                                    max_num_columns_to_effect=0)\n",
+    "models_params_for_tuning = get_compas_models_params_for_tuning(experiment_seed)\n",
+    "# Create a transformed data loader\n",
+    "exp_iter_data_loader = create_experiment_data_loader(data_loader)\n",
+    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "run_exp_iter_with_models_stress_testing(data_loader=exp_iter_data_loader,\n",
+    "                                        experiment_seed=experiment_seed,\n",
+    "                                        test_set_fraction=TEST_SET_FRACTION,\n",
+    "                                        db_writer_func=db_writer_func,\n",
+    "                                        error_injector=error_injector,\n",
+    "                                        injector_config_lst=INJECTOR_CONFIG_LST,\n",
+    "                                        preprocessor=preprocessor,\n",
+    "                                        models_params_for_tuning=models_params_for_tuning,\n",
+    "                                        metrics_computation_config=metrics_computation_config,\n",
+    "                                        custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                        # with_tuning=True,\n",
+    "                                        # tuned_params_df_path=None,\n",
+    "                                        with_tuning=False,\n",
+    "                                        tuned_params_df_path=tuned_params_df_path,\n",
+    "                                        save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                        mode='max_num_columns',\n",
+    "                                        verbose=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Experiment iteration 3"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Configs for an experiment iteration\n",
+    "exp_iter_num = 3\n",
+    "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
+    "tuned_params_filename = 'tuning_results_COMPAS_exp_iter_3_20230425__182629.csv'\n",
+    "tuned_params_df_path = os.path.join(ROOT_DIR, 'results', 'stress_testing_nulls',\n",
+    "                                    'models_tuning', tuned_params_filename)\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "\n",
+    "error_injector = OutliersInjectorV2(experiment_seed, columns_to_transform=COLUMNS_TO_TRANSFORM,\n",
+    "                                    row_idx_percentage=ROWS_PCT_TO_AFFECT,\n",
+    "                                    max_num_columns_to_effect=0)\n",
+    "models_params_for_tuning = get_compas_models_params_for_tuning(experiment_seed)\n",
+    "# Create a transformed data loader\n",
+    "exp_iter_data_loader = create_experiment_data_loader(data_loader)\n",
+    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "run_exp_iter_with_models_stress_testing(data_loader=exp_iter_data_loader,\n",
+    "                                        experiment_seed=experiment_seed,\n",
+    "                                        test_set_fraction=TEST_SET_FRACTION,\n",
+    "                                        db_writer_func=db_writer_func,\n",
+    "                                        error_injector=error_injector,\n",
+    "                                        injector_config_lst=INJECTOR_CONFIG_LST,\n",
+    "                                        preprocessor=preprocessor,\n",
+    "                                        models_params_for_tuning=models_params_for_tuning,\n",
+    "                                        metrics_computation_config=metrics_computation_config,\n",
+    "                                        custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                        # with_tuning=True,\n",
+    "                                        # tuned_params_df_path=None,\n",
+    "                                        with_tuning=False,\n",
+    "                                        tuned_params_df_path=tuned_params_df_path,\n",
+    "                                        save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                        mode='max_num_columns',\n",
+    "                                        verbose=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Experiment iteration 4"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Configs for an experiment iteration\n",
+    "exp_iter_num = 4\n",
+    "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
+    "tuned_params_filename = 'tuning_results_COMPAS_exp_iter_4_20230425__184149.csv'\n",
+    "tuned_params_df_path = os.path.join(ROOT_DIR, 'results', 'stress_testing_nulls',\n",
+    "                                    'models_tuning', tuned_params_filename)\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "\n",
+    "error_injector = OutliersInjectorV2(experiment_seed, columns_to_transform=COLUMNS_TO_TRANSFORM,\n",
+    "                                    row_idx_percentage=ROWS_PCT_TO_AFFECT,\n",
+    "                                    max_num_columns_to_effect=0)\n",
+    "models_params_for_tuning = get_compas_models_params_for_tuning(experiment_seed)\n",
+    "# Create a transformed data loader\n",
+    "exp_iter_data_loader = create_experiment_data_loader(data_loader)\n",
+    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "run_exp_iter_with_models_stress_testing(data_loader=exp_iter_data_loader,\n",
+    "                                        experiment_seed=experiment_seed,\n",
+    "                                        test_set_fraction=TEST_SET_FRACTION,\n",
+    "                                        db_writer_func=db_writer_func,\n",
+    "                                        error_injector=error_injector,\n",
+    "                                        injector_config_lst=INJECTOR_CONFIG_LST,\n",
+    "                                        preprocessor=preprocessor,\n",
+    "                                        models_params_for_tuning=models_params_for_tuning,\n",
+    "                                        metrics_computation_config=metrics_computation_config,\n",
+    "                                        custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                        # with_tuning=True,\n",
+    "                                        # tuned_params_df_path=None,\n",
+    "                                        with_tuning=False,\n",
+    "                                        tuned_params_df_path=tuned_params_df_path,\n",
+    "                                        save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                        mode='max_num_columns',\n",
+    "                                        verbose=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Experiment iteration 5"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Configs for an experiment iteration\n",
+    "exp_iter_num = 5\n",
+    "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
+    "tuned_params_filename = 'tuning_results_COMPAS_exp_iter_5_20230425__185721.csv'\n",
+    "tuned_params_df_path = os.path.join(ROOT_DIR, 'results', 'stress_testing_nulls',\n",
+    "                                    'models_tuning', tuned_params_filename)\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "\n",
+    "error_injector = OutliersInjectorV2(experiment_seed, columns_to_transform=COLUMNS_TO_TRANSFORM,\n",
+    "                                    row_idx_percentage=ROWS_PCT_TO_AFFECT,\n",
+    "                                    max_num_columns_to_effect=0)\n",
+    "models_params_for_tuning = get_compas_models_params_for_tuning(experiment_seed)\n",
+    "# Create a transformed data loader\n",
+    "exp_iter_data_loader = create_experiment_data_loader(data_loader)\n",
+    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "run_exp_iter_with_models_stress_testing(data_loader=exp_iter_data_loader,\n",
+    "                                        experiment_seed=experiment_seed,\n",
+    "                                        test_set_fraction=TEST_SET_FRACTION,\n",
+    "                                        db_writer_func=db_writer_func,\n",
+    "                                        error_injector=error_injector,\n",
+    "                                        injector_config_lst=INJECTOR_CONFIG_LST,\n",
+    "                                        preprocessor=preprocessor,\n",
+    "                                        models_params_for_tuning=models_params_for_tuning,\n",
+    "                                        metrics_computation_config=metrics_computation_config,\n",
+    "                                        custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                        # with_tuning=True,\n",
+    "                                        # tuned_params_df_path=None,\n",
+    "                                        with_tuning=False,\n",
+    "                                        tuned_params_df_path=tuned_params_df_path,\n",
+    "                                        save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                        mode='max_num_columns',\n",
+    "                                        verbose=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "906cdb7e",
@@ -677,7 +919,7 @@
    },
    "outputs": [],
    "source": [
-    "client.close()"
+    "# client.close()"
    ]
   },
   {
