Added a template for exp 3 COMPAS nulls

--- a/notebooks/stress_testing_with_cols_imp/COMPAS_With_Random_Nulls.ipynb
+++ b/notebooks/stress_testing_with_cols_imp/COMPAS_With_Random_Nulls.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "17095b60",
    "metadata": {
     "ExecuteTime": {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "be2046c5",
    "metadata": {
     "ExecuteTime": {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d3f71f9d",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "32a7f671",
    "metadata": {
     "ExecuteTime": {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a1780e29",
    "metadata": {
     "ExecuteTime": {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a414fd39",
    "metadata": {
     "ExecuteTime": {
@@ -201,7 +201,7 @@
       "text/plain": "   age  juv_fel_count  juv_misd_count  juv_other_count  priors_count  \\\n0   25            0.0       -2.340451              1.0    -15.010999   \n1   26            0.0        0.000000              0.0      0.000000   \n2   21            0.0        0.000000              0.0      0.000000   \n3   29            0.0        0.000000              0.0      6.000000   \n4   40            0.0        0.000000              0.0      7.513697   \n\n               race  age_cat_25 - 45  age_cat_Greater than 45  \\\n0  African-American                1                        0   \n1         Caucasian                1                        0   \n2         Caucasian                0                        0   \n3  African-American                1                        0   \n4         Caucasian                1                        0   \n\n   age_cat_Less than 25  c_charge_degree_F  c_charge_degree_M  sex  \n0                     0                  0                  1    1  \n1                     0                  1                  0    0  \n2                     1                  1                  0    1  \n3                     0                  0                  1    1  \n4                     0                  1                  0    1  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>juv_fel_count</th>\n      <th>juv_misd_count</th>\n      <th>juv_other_count</th>\n      <th>priors_count</th>\n      <th>race</th>\n      <th>age_cat_25 - 45</th>\n      <th>age_cat_Greater than 45</th>\n      <th>age_cat_Less than 25</th>\n      <th>c_charge_degree_F</th>\n      <th>c_charge_degree_M</th>\n      <th>sex</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>25</td>\n      <td>0.0</td>\n      <td>-2.340451</td>\n      <td>1.0</td>\n      <td>-15.010999</td>\n      <td>African-American</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>26</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>Caucasian</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>21</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>Caucasian</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>29</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>6.000000</td>\n      <td>African-American</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>40</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>7.513697</td>\n      <td>Caucasian</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f89c85cb",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
      "data": {
       "text/plain": "(5278, 13)"
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ce36ee72",
    "metadata": {
     "ExecuteTime": {
@@ -245,7 +245,7 @@
      "data": {
       "text/plain": "age                        0\njuv_fel_count              0\njuv_misd_count             0\njuv_other_count            0\npriors_count               0\nage_cat_25 - 45            0\nage_cat_Greater than 45    0\nage_cat_Less than 25       0\nc_charge_degree_F          0\nc_charge_degree_M          0\nrace                       0\nsex                        0\nrecidivism                 0\ndtype: int64"
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "411b8554",
    "metadata": {
     "ExecuteTime": {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e8e773c4",
    "metadata": {
     "ExecuteTime": {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "bd33f1ea",
    "metadata": {
     "ExecuteTime": {
@@ -313,14 +313,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  4dcca348-d667-4e41-bc9d-234796af4dbf\n"
+      "Current session uuid:  3af1ec57-10d1-4cce-8cc5-1676ea7b1f8c\n"
      ]
     }
    ],
    "source": [
     "import uuid\n",
     "\n",
-    "custom_table_fields_dct['session_uuid'] = '4dcca348-d667-4e41-bc9d-234796af4dbf'\n",
+    "custom_table_fields_dct['session_uuid'] = '3af1ec57-10d1-4cce-8cc5-1676ea7b1f8c'\n",
     "# custom_table_fields_dct['session_uuid'] = str(uuid.uuid4())\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
@@ -350,8 +350,7 @@
     "f\"\"\"\n",
     "dataset_name: COMPAS\n",
     "bootstrap_fraction: 0.8\n",
-    "# n_estimators: 200  # Better to input the higher number of estimators than 100; this is only for this use case example\n",
-    "n_estimators: 10\n",
+    "n_estimators: 200  # Better to input the higher number of estimators than 100; this is only for this use case example\n",
     "num_runs: 1\n",
     "runs_seed_lst: [100]\n",
     "sensitive_attributes_dct: {{'sex': 0, 'race': 'Caucasian', 'sex&race': None}}\n",
@@ -690,8 +689,252 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Experiment iteration 2"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Configs for an experiment iteration\n",
+    "exp_iter_num = 2\n",
+    "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
+    "tuned_params_filename = 'tuning_results_COMPAS_exp_iter_2_20230425__180925.csv'\n",
+    "tuned_params_df_path = os.path.join(ROOT_DIR, 'results', 'stress_testing_nulls',\n",
+    "                                    'models_tuning', tuned_params_filename)\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "\n",
+    "error_injector = RandomNullsInjectorV2(experiment_seed, columns_to_transform=COLUMNS_TO_TRANSFORM,\n",
+    "                                       row_idx_nulls_percentage=ROWS_PCT_TO_AFFECT, max_num_columns_to_effect=1)\n",
+    "models_params_for_tuning = get_compas_models_params_for_tuning(experiment_seed)\n",
+    "# Create a transformed data loader\n",
+    "exp_iter_data_loader = create_experiment_data_loader(data_loader)\n",
+    "exp_iter_data_loader.columns_with_nulls = INJECTOR_CONFIG_LST\n",
+    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "run_exp_iter_with_models_stress_testing(data_loader=exp_iter_data_loader,\n",
+    "                                        experiment_seed=experiment_seed,\n",
+    "                                        test_set_fraction=TEST_SET_FRACTION,\n",
+    "                                        db_writer_func=db_writer_func,\n",
+    "                                        error_injector=error_injector,\n",
+    "                                        injector_config_lst=INJECTOR_CONFIG_LST,\n",
+    "                                        preprocessor=preprocessor,\n",
+    "                                        models_params_for_tuning=models_params_for_tuning,\n",
+    "                                        metrics_computation_config=metrics_computation_config,\n",
+    "                                        custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                        # with_tuning=True,\n",
+    "                                        # tuned_params_df_path=None,\n",
+    "                                        with_tuning=False,\n",
+    "                                        tuned_params_df_path=tuned_params_df_path,\n",
+    "                                        save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                        mode='column_importance',\n",
+    "                                        verbose=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Experiment iteration 3"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Configs for an experiment iteration\n",
+    "exp_iter_num = 3\n",
+    "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
+    "tuned_params_filename = 'tuning_results_COMPAS_exp_iter_3_20230425__182629.csv'\n",
+    "tuned_params_df_path = os.path.join(ROOT_DIR, 'results', 'stress_testing_nulls',\n",
+    "                                    'models_tuning', tuned_params_filename)\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "\n",
+    "error_injector = RandomNullsInjectorV2(experiment_seed, columns_to_transform=COLUMNS_TO_TRANSFORM,\n",
+    "                                       row_idx_nulls_percentage=ROWS_PCT_TO_AFFECT, max_num_columns_to_effect=1)\n",
+    "models_params_for_tuning = get_compas_models_params_for_tuning(experiment_seed)\n",
+    "# Create a transformed data loader\n",
+    "exp_iter_data_loader = create_experiment_data_loader(data_loader)\n",
+    "exp_iter_data_loader.columns_with_nulls = INJECTOR_CONFIG_LST\n",
+    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "run_exp_iter_with_models_stress_testing(data_loader=exp_iter_data_loader,\n",
+    "                                        experiment_seed=experiment_seed,\n",
+    "                                        test_set_fraction=TEST_SET_FRACTION,\n",
+    "                                        db_writer_func=db_writer_func,\n",
+    "                                        error_injector=error_injector,\n",
+    "                                        injector_config_lst=INJECTOR_CONFIG_LST,\n",
+    "                                        preprocessor=preprocessor,\n",
+    "                                        models_params_for_tuning=models_params_for_tuning,\n",
+    "                                        metrics_computation_config=metrics_computation_config,\n",
+    "                                        custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                        # with_tuning=True,\n",
+    "                                        # tuned_params_df_path=None,\n",
+    "                                        with_tuning=False,\n",
+    "                                        tuned_params_df_path=tuned_params_df_path,\n",
+    "                                        save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                        mode='column_importance',\n",
+    "                                        verbose=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Experiment iteration 4"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Configs for an experiment iteration\n",
+    "exp_iter_num = 4\n",
+    "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
+    "tuned_params_filename = 'tuning_results_COMPAS_exp_iter_4_20230425__184149.csv'\n",
+    "tuned_params_df_path = os.path.join(ROOT_DIR, 'results', 'stress_testing_nulls',\n",
+    "                                    'models_tuning', tuned_params_filename)\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "\n",
+    "error_injector = RandomNullsInjectorV2(experiment_seed, columns_to_transform=COLUMNS_TO_TRANSFORM,\n",
+    "                                       row_idx_nulls_percentage=ROWS_PCT_TO_AFFECT, max_num_columns_to_effect=1)\n",
+    "models_params_for_tuning = get_compas_models_params_for_tuning(experiment_seed)\n",
+    "# Create a transformed data loader\n",
+    "exp_iter_data_loader = create_experiment_data_loader(data_loader)\n",
+    "exp_iter_data_loader.columns_with_nulls = INJECTOR_CONFIG_LST\n",
+    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "run_exp_iter_with_models_stress_testing(data_loader=exp_iter_data_loader,\n",
+    "                                        experiment_seed=experiment_seed,\n",
+    "                                        test_set_fraction=TEST_SET_FRACTION,\n",
+    "                                        db_writer_func=db_writer_func,\n",
+    "                                        error_injector=error_injector,\n",
+    "                                        injector_config_lst=INJECTOR_CONFIG_LST,\n",
+    "                                        preprocessor=preprocessor,\n",
+    "                                        models_params_for_tuning=models_params_for_tuning,\n",
+    "                                        metrics_computation_config=metrics_computation_config,\n",
+    "                                        custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                        # with_tuning=True,\n",
+    "                                        # tuned_params_df_path=None,\n",
+    "                                        with_tuning=False,\n",
+    "                                        tuned_params_df_path=tuned_params_df_path,\n",
+    "                                        save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                        mode='column_importance',\n",
+    "                                        verbose=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Experiment iteration 5"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Configs for an experiment iteration\n",
+    "exp_iter_num = 5\n",
+    "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
+    "tuned_params_filename = 'tuning_results_COMPAS_exp_iter_5_20230425__185721.csv'\n",
+    "tuned_params_df_path = os.path.join(ROOT_DIR, 'results', 'stress_testing_nulls',\n",
+    "                                    'models_tuning', tuned_params_filename)\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "\n",
+    "error_injector = RandomNullsInjectorV2(experiment_seed, columns_to_transform=COLUMNS_TO_TRANSFORM,\n",
+    "                                       row_idx_nulls_percentage=ROWS_PCT_TO_AFFECT, max_num_columns_to_effect=1)\n",
+    "models_params_for_tuning = get_compas_models_params_for_tuning(experiment_seed)\n",
+    "# Create a transformed data loader\n",
+    "exp_iter_data_loader = create_experiment_data_loader(data_loader)\n",
+    "exp_iter_data_loader.columns_with_nulls = INJECTOR_CONFIG_LST\n",
+    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "run_exp_iter_with_models_stress_testing(data_loader=exp_iter_data_loader,\n",
+    "                                        experiment_seed=experiment_seed,\n",
+    "                                        test_set_fraction=TEST_SET_FRACTION,\n",
+    "                                        db_writer_func=db_writer_func,\n",
+    "                                        error_injector=error_injector,\n",
+    "                                        injector_config_lst=INJECTOR_CONFIG_LST,\n",
+    "                                        preprocessor=preprocessor,\n",
+    "                                        models_params_for_tuning=models_params_for_tuning,\n",
+    "                                        metrics_computation_config=metrics_computation_config,\n",
+    "                                        custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                        # with_tuning=True,\n",
+    "                                        # tuned_params_df_path=None,\n",
+    "                                        with_tuning=False,\n",
+    "                                        tuned_params_df_path=tuned_params_df_path,\n",
+    "                                        save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                        mode='column_importance',\n",
+    "                                        verbose=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "824a35e5",
    "metadata": {
     "ExecuteTime": {
